Added Christian McCarty to the build.xml license.

--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!--
 	build.xml - The ant build script for building the cable package
-	Copyright (C) 2012  Mark Owen
+	Copyright (C) 2012  Mark Owen and Christian McCarty
 
 	This program is free software: you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
